--- a/package.json
+++ b/package.json
@@ -54,10 +54,12 @@
     "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "react-slick": "^0.25.2",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.2",
     "semver": "6.3.0",
+    "slick-carousel": "^1.8.1",
     "style-loader": "1.1.3",
     "terser-webpack-plugin": "2.3.4",
     "ts-pnp": "1.1.5",
