--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
     "lodash": "^4.17.15",
+    "lodash.debounce": "^4.0.8",
     "mini-css-extract-plugin": "0.9.0",
     "node-sass": "^4.13.1",
     "optimize-css-assets-webpack-plugin": "5.0.3",
